# embassy-watchtower

./: README.md
embassy-beacon/: Cargo.toml  README.md
embassy-beacon/src/: core_id.rs  lib.rs
embassy-visor/: Cargo.toml  README.md
embassy-visor/src/: elf_file.rs  main.rs
embassy-visor/src/analysis/: mod.rs
embassy-visor/src/cargo/: cargo_build.rs  cargo_child.rs  mod.rs
embassy-visor/src/tracing/: executor.rs  instance.rs  mod.rs  task.rs  time.rs  trace_data.rs
embassy-visor/src/tracing/stats/: core_stats.rs  executor_stats.rs  instance_stats.rs  mod.rs  task_stats.rs
embassy-visor/src/visualizer/: app.rs  mod.rs
embassy-visor/src/visualizer/views/: core_view.rs  executor_view.rs  instance_view.rs  mod.rs  task_view.rs
examples/esp32-mutlicore/: Cargo.toml  README.md
examples/stm32-multiprio/: Cargo.toml
examples/stm32-multiprio/src/: main.rs
