[package]
name = "embassy-beacon"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "An Embassy-based embedded crate that broadcasts Embassy Executor Telemetry via Defmt"

[dependencies]
defmt = {version = "1.0", optional = true}
embassy-executor = { version = "0.9.0", features = ["trace"] }
embassy-time = { version = "0.3.0" }

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-hal = "1.0.0"

[target.'cfg(target_arch = "riscv32")'.dependencies]
esp-hal = "1.0.0"


# Set defmt-debug as default feature
[features]
default = ["defmt"] # when no feature is chosen, use defmt

defmt = ["defmt-println"] # when just dfmt is chosen, use defmt-println
defmt-trace = ["dep:defmt"]
defmt-debug = ["dep:defmt"]
defmt-info = ["dep:defmt"]
defmt-warn = ["dep:defmt"]
defmt-error = ["dep:defmt"]
defmt-println = ["dep:defmt"]